[project]
name = "vlessich-bot"
version = "0.1.0"
description = "Vlessich Telegram bot (aiogram 3)"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiogram>=3.13,<4",
  "aiohttp>=3.10",
  "pydantic>=2.8",
  "pydantic-settings>=2.5",
  "redis>=5.0",
  "orjson>=3.10",
  "structlog>=24.4",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "types-redis",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
